# fourier-drawing

./: AI.c  AI.h  Audio.h  BoardGUI.c  BoardGUI.h  BoardLogic.c  BoardLogic.h  CMakeLists.txt  Cycloide.sln  GUI.c  GUI.h  GameStructures.h  PiecesLogic.c  PiecesLogic.h  README.md  TT.c  TT.h  audio.c  audio.h  conanfile.txt  conaninfo.txt  fft.c  fft.h  gui.glade  gui.glade~  kiss_fft.c  kiss_fft.h  kiss_fft_guts.h  kiss_fftr.c  kiss_fftr.h  main.c  main.py  pathparser.c  pathparser.h  rendering.c  rendering.h  shapes.c  shapes.h  svg  svg.h  (+2 more)
Cycloide/: BezierCurve.c  BezierCurve.h  Camera.c  Camera.h  Cycloide.aps  Cycloide.vcxproj  Cycloide.vcxproj.filters  Doxyfile  Fourier.c  Fourier.h  Menu.c  Menu.h  MenuTextures.c  MenuTextures.h  complex.c  complex.h  conanfile.txt  gui.glade~  main.c  packages.config  pathparser.c  pathparser.h  resource.h  shapes.c  shapes.h  svgparser.c  svgparser.h  test.xml
html/: annotated.html  classes.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  index.html  main_8c.html  menudata.js  shapes_8c.html  shapes_8h.html  shapes_8h_source.html  struct_s_h_a_p_e___abstract__s.html  struct_s_h_a_p_e___circle__s.html  struct_s_h_a_p_e___ellipse__s.html  struct_s_h_a_p_e___line__s.html  struct_s_h_a_p_e___path__s.html  struct_s_h_a_p_e___pathblock__s.html  struct_s_h_a_p_e___point__s.html  struct_s_h_a_p_e___polygone__s.html  struct_s_h_a_p_e___polyline__s.html  struct_s_h_a_p_e___rectangle__s.html  structxml_node_shape__s.html  svgparser_8c.html  svgparser_8h.html  svgparser_8h_source.html
latex/: annotated.tex  files.tex  main_8c.tex  refman.tex  shapes_8c.tex  shapes_8h.tex  shapes_8h_source.tex  struct_s_h_a_p_e___abstract__s.tex  struct_s_h_a_p_e___circle__s.tex  struct_s_h_a_p_e___ellipse__s.tex  (+11 more)
(+54 files in other folders)
